--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -52,12 +52,14 @@ changes since 0.9.8:
   - Fixed OBJ and 3ds import and export so that NiImage and NiTexture are created in 3.x files, and are detected during OBJ export.
   - Fixed a bug that was causing the "Has UV" bool not to be set correctly when an OBJ file was imported.
   
- * Misc.
-  - GCC build fixes.
-  - Added check for empty QFileSystemWatcher, this removes the nasty qWarning
+ * NIF Compatibility
+  - Added partial support for the following new games: Loki, Pro Cycling Manager, Shin Megami Tensei
   - Fixed a bug that made NifSkope fail to load the 3.3.0.13 file.
   - Fixed problem with version 3.03 conditions in the XML.  Version 3.1 files can be read again.
-  - Added QDir::toNativeSeparators() to the file field.  Slashes will now be backslashes on Windows.
+ 
+ * Misc. 
+  - GCC build fixes.
+  - Added check for empty QFileSystemWatcher, this removes the nasty qWarning
 
 changes since 0.9.7:
   - Bugfix Re-Release
