--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -9,6 +9,13 @@ changes since 1.0.4:
  * Registry settings between different versions of nifskope are no longer
    shared to avoid compatibility problems if multiple versions of nifskope
    are used on the same system.
+ * Non-binary registry settings are copied from older versions of nifskope,
+   if a newer version of nifskope is run for the first time.
+ * Some minor xml updates:
+   - NiMeshPSysData fixed and simplified
+   - new version 20.3.0.2 from emerge demo
+   - replaced Target in NiTimeController with unknown int to cope with invalid
+     pointers in nif versions <= 3.1
 
 changes since 1.0.3:
  * XML update to fix the 'array "Constraints" much too large ... failed to load
