--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -1,6 +1,9 @@
  == CHANGELOG ==
 
-This is version 1.0.6 of NifSkope.
+This is version 1.0.7 of NifSkope.
+
+changes since 1.0.6:
+ * Added + and - to expression parser.
 
 changes since 1.0.5:
  * Stylesheet for the linux version.
