--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -3,9 +3,10 @@
 This is version 1.0.7 of NifSkope.
 
 changes since 1.0.6:
+ * Fixes for the MinGW build, the build now works on all Windows versions
+   (also older versions that are no longer supported by Microsoft).
  * Added + and - to expression parser.
  * Updates to nif and kfm format.
- * Fixes for the MinGW build.
  * Cleaned up kfm xml format.
 
 changes since 1.0.5:
