software DXT compression for windows to work around texture corruption on some DXT5 textures

--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -1,5 +1,11 @@
  == CHANGELOG ==
 
+This is version 1.0.8 of NifSkope.
+
+changes since 1.0.7:
+ * Use software DXT decompression also on Windows to work around texture
+   corruption bug
+
 This is version 1.0.7 of NifSkope.
 
 changes since 1.0.6:
