--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -4,6 +4,8 @@ This is version 1.0.9 of NifSkope.
 
 changes since 1.0.8:
  * synced DDS decompression with upstream (nvidia texture tools revision 488)
+ * fixed nif.xml for 10.2.0.0 Oblivion havok blocks
+ * fixed DXT5 alpha channel corruption
 
 changes since 1.0.7:
  * Use software DXT decompression also on Windows to work around texture
