--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -1,6 +1,9 @@
  == CHANGELOG ==
 
-This is version 1.0.9 of NifSkope.
+This is version 1.0.10 of NifSkope.
+
+changes since 1.0.9:
+ * fixed bsa file compression bug for Morrowind
 
 changes since 1.0.8:
  * synced DDS decompression with upstream (nvidia texture tools revision 488)
