--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -7,6 +7,7 @@ changes since 1.0.10:
    furniture markers in some releases of the game)
  * fixed code to compile with Qt 4.4.0
  * creating new BSXFlags block sets name automatically to BSX (issue #1955870)
+ * darker background for UV editor to ease editing of UV map (issue #1971002)
 
 changes since 1.0.9:
  * fixed bsa file compression bug for Morrowind
