worked around Qt 4.4.0 bug which caused toolbar widgets not to enable again

--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -5,7 +5,7 @@ This is version 1.0.11 of NifSkope.
 changes since 1.0.10:
  * added support for nif version 10.1.0.101 (used for instance by Oblivion
    furniture markers in some releases of the game)
- * fixed code to compile with Qt 4.4.0
+ * fixed code to compile with Qt 4.4.0 and worked around some Qt 4.4.0 bugs
  * creating new BSXFlags block sets name automatically to BSX (issue #1955870)
  * darker background for UV editor to ease editing of UV map (issue #1971002)
  * fixed bug which caused texture file path not to be stored between
