toolbar whitespace fix for linux

--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -17,6 +17,7 @@ changes since 1.0.10:
    blocks (issue #1980709)
  * load mipmaps from DDS file rather than recalculating them from the first
    level texture (issue #1981056)
+ * toolbar whitespace fix for linux
 
 changes since 1.0.9:
  * fixed bsa file compression bug for Morrowind
