--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -6,6 +6,7 @@ changes since 1.0.12:
  * workaround for Qt 4.4.0 annoyance: QFileSystemWatcher no longer barfs
  * installer also registers kfm and nifcache extensions
  * remove empty modifiers from NiParticleSystem when sanitizing
+ * fixed value column in hierarchy view when switching from list view
 
 changes since 1.0.11:
  * fixed animation slider and animation group selector being grayed out
