--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -7,6 +7,7 @@ changes since 1.0.12:
  * installer also registers kfm and nifcache extensions
  * remove empty modifiers from NiParticleSystem when sanitizing
  * fixed value column in hierarchy view when switching from list view
+ * new mopp code generator spell (windows only), using havok library
 
 changes since 1.0.11:
  * fixed animation slider and animation group selector being grayed out
