--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -8,6 +8,7 @@ changes since 1.0.12:
  * remove empty modifiers from NiParticleSystem when sanitizing
  * fixed value column in hierarchy view when switching from list view
  * new mopp code generator spell (windows only), using havok library
+ * some small nif.xml updates
 
 changes since 1.0.11:
  * fixed animation slider and animation group selector being grayed out
