obj exporter warns user when exporting skinned mesh

--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -9,6 +9,8 @@ changes since 1.0.12:
  * fixed value column in hierarchy view when switching from list view
  * new mopp code generator spell (windows only), using havok library
  * some small nif.xml updates
+ * warn user when exporting skinned mesh as .OBJ that skin weights will not be
+   exported
 
 changes since 1.0.11:
  * fixed animation slider and animation group selector being grayed out
