--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -11,6 +11,7 @@ changes since 1.0.12:
  * some small nif.xml updates
  * warn user when exporting skinned mesh as .OBJ that skin weights will not be
    exported
+ * updated skin partition spell to work also on NiTriStrips
 
 changes since 1.0.11:
  * fixed animation slider and animation group selector being grayed out
