fixed archive support for BSA files for use with textures

--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -5,6 +5,7 @@ This is version 1.0.14 of NifSkope.
 changes since 1.0.13:
  * fixed bhkRigidBodyT transform
  * fixed (innocent but annoying) error message on blob type
+ * fixed archive support for BSA files for use with textures
 
 changes since 1.0.12:
  * workaround for Qt annoyance: QFileSystemWatcher no longer barfs
