--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -5,7 +5,8 @@ This is version 1.0.14 of NifSkope.
 changes since 1.0.13:
  * fixed bhkRigidBodyT transform
  * fixed (innocent but annoying) error message on blob type
- * fixed archive support for BSA files for use with textures
+ * fixed Oblivion archive support for BSA files for use with textures
+ * fixed having wrong texture in render window under certain conditions
 
 changes since 1.0.12:
  * workaround for Qt annoyance: QFileSystemWatcher no longer barfs
