--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -3,7 +3,8 @@
 This is version 1.0.16 of NifSkope.
 
 changes since 1.0.15:
- 
+ * Add Transform Inspection window
+
 changes since 1.0.14:
  * fixed issues with attaching kf controller with nif/kf version >= 20.1.0.3
  * updated mopp code generation to use subshape materials
