--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -3,7 +3,9 @@
 This is version 1.0.16 of NifSkope.
 
 changes since 1.0.15:
- * Add Transform Inspection window
+ * add Transform Inspection window
+ * add Fallout 3 to game texture auto detection
+ * nif.xml updates for Fallout 3
 
 changes since 1.0.14:
  * fixed issues with attaching kf controller with nif/kf version >= 20.1.0.3
