--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -8,6 +8,7 @@ changes since 1.0.15:
  * nif.xml updates for Fallout 3
  * add support for Fallout 3 BSA files
  * add material color override in settings 
+ * new version condition evaluation engine to handle Fallout
 
 changes since 1.0.14:
  * fixed issues with attaching kf controller with nif/kf version >= 20.1.0.3
