--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -3,6 +3,7 @@
 This is version 1.0.17 of NifSkope.
 
 changes since 1.0.16:
+ * force updateHeader and updateFooter to be called before save
  * introduce bitflag data type
  * add editor for bitflag types
  
