--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -11,6 +11,7 @@ changes since 1.0.16:
  * more support for internationalization
  * bug fixes in the renderer which completely disabled shaders on common hardware
  * bug fix for showing BSDismemberedSkinInstance highlighting in viewer when partitions were selected
+ * fix to make Fallout 3 normal map shader renderer work
  
 changes since 1.0.15:
  * add Transform Inspection window
