--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -1,6 +1,9 @@
  == CHANGELOG ==
 
-This is version 1.0.17 of NifSkope.
+This is version 1.0.18 of NifSkope.
+
+changes since 1.0.17:
+ * fix for corruption of BSShaderNoLightingProperty file names when using texture chooser
 
 changes since 1.0.16:
  * force updateHeader and updateFooter to be called before save
