--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -3,7 +3,9 @@
 This is version 1.0.18 of NifSkope.
 
 changes since 1.0.17:
- * fix for corruption of BSShaderNoLightingProperty file names when using texture chooser
+ * fixed corruption of BSShaderNoLightingProperty file names when using texture chooser
+ * fixed rendering settings which sometimes broke texture rendering when shader not used
+ * added settings page for selecting displayed user interface language
 
 changes since 1.0.16:
  * force updateHeader and updateFooter to be called before save
