nifscope:  added Block | Convert Spell for cleanly changing node type

--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -6,6 +6,8 @@ changes since 1.0.17:
  * fixed corruption of BSShaderNoLightingProperty file names when using texture chooser
  * fixed rendering settings which sometimes broke texture rendering when shader not used
  * added settings page for selecting displayed user interface language
+ * fixed Binormals and Tangents swapped in Fallout 3 files [ niftools-Bugs-2466995 ]
+ * added Block | Convert Spell for cleanly changing node type
 
 changes since 1.0.16:
  * force updateHeader and updateFooter to be called before save
