--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -1,6 +1,8 @@
  == CHANGELOG ==
 
-This is version 1.0.18 of NifSkope.
+This is version 1.0.19 of NifSkope.
+
+changes since 1.0.18:
 
 changes since 1.0.17:
  * fixed corruption of BSShaderNoLightingProperty file names when using texture chooser
