--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -7,6 +7,7 @@ changes since 1.0.18:
  * new "Duplicate" and "Duplicate Branch" spells
  * new "Flip Normals" spell and option to scale normals in "Scale Vertices"
  * new "Mirror armature" spell for Morrowind
+ * Add support for UV editing of embedded textures and external nif textures
 
 changes since 1.0.17:
  * fixed corruption of BSShaderNoLightingProperty file names when using texture chooser
