--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -8,6 +8,8 @@ changes since 1.0.18:
  * new "Flip Normals" spell and option to scale normals in "Scale Vertices"
  * new "Mirror armature" spell for Morrowind
  * Add support for UV editing of embedded textures and external nif textures
+ * "failed to load file header" message now gives hexadecimal and string
+   values instead of decimal
 
 changes since 1.0.17:
  * fixed corruption of BSShaderNoLightingProperty file names when using texture chooser
@@ -27,7 +29,7 @@ changes since 1.0.16:
  * bug fixes in the renderer which completely disabled shaders on common hardware
  * bug fix for showing BSDismemberedSkinInstance highlighting in viewer when partitions were selected
  * fix to make Fallout 3 normal map shader renderer work
- 
+
 changes since 1.0.15:
  * add Transform Inspection window
  * add Fallout 3 to game texture auto detection
