--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -3,13 +3,23 @@
 This is version 1.0.19 of NifSkope.
 
 changes since 1.0.18:
- * shortcut keys for "Copy Branch" and "Paste Branch"
- * new "Duplicate" and "Duplicate Branch" spells
- * new "Flip Normals" spell and option to scale normals in "Scale Vertices"
- * new "Mirror armature" spell for Morrowind
+ * Spells:
+  - fixed "Multi Apply Mode" spell [ niftools-Bugs-2475705 ]
+  - shortcut keys for "Copy Branch" and "Paste Branch"
+  - new "Duplicate" and "Duplicate Branch" spells
+  - new "Flip Normals" spell and option to scale normals in "Scale Vertices"
+  - new "Mirror armature" spell for Morrowind
+  - add flag editing for NiBillboardNode
+  - automate NiTextureEffect attachment (found under Node->Attach Light)
+  - adding a new texture now presents a file selection dialog
+  - new "Collapse Array" spell to selectively remove empty links
  * Add support for UV editing of embedded textures and external nif textures
  * "failed to load file header" message now gives hexadecimal and string
    values instead of decimal
+ * nif.xml handling:
+  - read nif.xml from current directory in preference
+  - fix handling of signed values
+  - allow enumeration defaults to be specified by name
 
 changes since 1.0.17:
  * fixed corruption of BSShaderNoLightingProperty file names when using texture chooser
